syntax = "proto3";
package ukama.packages.v1;
option go_package = "pb/gen";

import "validator.proto";

service PackagesService {
    rpc Get (GetPackageRequest) returns (GetPackageResponse) {}
    rpc Add (AddPackageRequest) returns (AddPackageResponse){}
    rpc Delete (DeletePackageRequest) returns (DeletePackageResponse){}
    rpc Update (UpdatePackageRequest) returns (UpdatePackageResponse){}
    rpc GetByOrg (GetByOrgPackageRequest) returns (GetByOrgPackageResponse){}

}
message GetPackageRequest{
    string packageUuid = 1 [(validator.field) = {uuid_ver: 0, string_not_empty: true}, json_name = "package_uuid"];
}
message GetByOrgPackageRequest{
    string orgId = 1 [(validator.field) = {uuid_ver: 0, string_not_empty: true}];
}
message GetByOrgPackageResponse{
    repeated Package packages =1;

}
message GetPackageResponse{
     Package package =1;
}
message DeletePackageRequest {
    string packageUuid = 1 [(validator.field) = {uuid_ver: 0, string_not_empty: true}, json_name = "package_uuid"];
}
message DeletePackageResponse {
    string packageUuid = 1 [(validator.field) = {uuid_ver: 0, string_not_empty: true}, json_name = "package_uuid"];
}
message UpdatePackageRequest {
    string uuid=2  [(validator.field) = {uuid_ver: 0}];
    string name=3;
    bool active=4;
    uint64 duration=5;
    SimType sim_type=6;
    int64 sms_volume=7;
    int64 data_volume=8;
    int64 voice_volume=9;
    uint64 org_rates_id=10;
}
message UpdatePackageResponse {
    Package package = 1;
}
message AddPackageRequest {
    string name =2;
    string org_id = 3 [(validator.field) = {uuid_ver: 0, string_not_empty: true}];
    bool active =4;
    uint64 duration =5;
    SimType sim_type=6;
    int64 sms_volume =10;
    int64 data_volume=11;
    int64 voice_volume =12;
    uint64 org_rates_id=13;
}
message AddPackageResponse {
     Package package =1;

}
message Package {
    uint64 id =1;
    string uuid=2  [(validator.field) = {uuid_ver: 0}];
    string name =3;
    string org_id = 4 [(validator.field) = {uuid_ver: 0, string_not_empty: true}];
    bool active =5;
    uint64 duration =6;
    SimType sim_type=7;
    string created_at=8;
    string deleted_at=9;
    string updated_at=10;
    int64 sms_volume =11;
    int64 data_volume=12;
    int64 voice_volume =13;
    uint64 org_rates_id=14;
}

enum SimType {
    INTER_NONE=0;
    INTER_MNO_DATA=1;
    INTER_MNO_ALL=2;
    INTER_UKAMA_ALL=3;
}
